[package]
name = "socket-tracer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
socket-tracer-common = { path = "../socket-tracer-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bytes = "1.6.0"

[[bin]]
name = "socket-tracer"
path = "src/main.rs"
